# oxidrive

./: Cargo.toml  Cross.toml  e.patch
.cargo/: config.toml
.github/workflows/: android.yml  linux.yml  unified.yml  windows.yml
core/: Cargo.toml
core/src/: chain.rs  commands.rs  engine.rs  lib.rs  node.rs
core/src/pedals/: amp.rs  cabinet.rs  delay_old.rs  mod.rs  silence.rs  waveshaper.rs
core/src/util/: ir.rs  mod.rs
cross/linux/: arm64.Dockerfile
dsp/: Cargo.toml
dsp/src/: lib.rs
dsp/src/engine/: buffer.rs  mod.rs  streams.rs
dsp/src/pedal/: chain.rs  commands.rs  graph.rs  mod.rs
dsp/src/traits/: mod.rs  normalized.rs
dsp/src/util/: bi_channel.rs  mod.rs
gui/android/: Cargo.toml
gui/android/src/: android_jni_ctx.rs  android_types.rs  lib.rs  platform.rs
gui/common/: Cargo.toml  build.rs  compile.rs
gui/common/src/: lib.rs  locale.rs  platform.rs  prefs.rs  utils.rs  window.rs
gui/common/ui/: components.slint  fragments.slint  main.slint  strings.slint  view_adapters.slint  views.slint
gui/common/ui/components/: graph_canvas.slint  pedals.slint
gui/common/ui/fragments/: pedals.slint  presets.slint  settings.slint
gui/common/ui/libs/fragment-1.0/: fragment.slint
gui/common/ui/libs/fragment-1.0/ui/components/: fragment.slint  fragment_container.slint
gui/common/ui/libs/material-1.0/: material.slint
gui/common/ui/libs/material-1.0/ui/components/: app_bar.slint
gui/common/ui/view_adapters/: graph_canvas.slint  main_view.slint  pedals.slint
gui/common/ui/views/: main.slint
gui/common/ui/window/: main.slint  main_window_adapter.slint
gui/tui/: Cargo.toml
gui/tui/src/: main.rs
gui/windows/: Cargo.toml
gui/windows/src/: main.rs  platform.rs
tui/: Cargo.toml
tui/src/: main.rs
