[package]
name = "oxidrive-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oxidrive"
path = "src/main.rs"

[dependencies]
oxidrive-core.workspace = true
cpal = { workspace = true, features = ["jack"] }

loglet.workspace = true

anyhow.workspace = true
log.workspace = true

