[package]	
name = "oxidrive-gui-android"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "oxidrive"
crate-type = ["cdylib"]

[dependencies]
oxidrive-gui-common.workspace = true

anyhow.workspace = true
log.workspace = true

android_logger.workspace = true
jni.workspace = true
android-activity.workspace = true

slint = { workspace = true, features = ["backend-android-activity-06"] }
sysdirs = { workspace = true, features = ["android-auto"] }

[package.metadata.android]
use_aapt2 = true
apk_name = "oxidrive"
package = "com.thatmg393.oxidrive"
assets = "../common/assets"
strip = "strip"
include_cplusplus_shared = true

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 35

[package.metadata.android.application]
label = "Oxidrive (Rust AmpSim)"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"
debuggable = true
extract_native_libs = true

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
orientation = "portrait"
exported = true

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.application.meta_data]]
name = "android.window.extensions.disableEdgeToEdge"
value = "true"

[[package.metadata.android.application.meta_data]]
name = "android.window.INSETS_DECOR_FITS_SYSTEM_WINDOWS"
value = "true"

