[package]
name = "oxidrive-gui-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

build = "build.rs"

[dependencies]
oxidrive-core.workspace = true

anyhow.workspace = true
log.workspace = true

slint = { workspace = true, features = ["serde"] }

serde.workspace = true
serde_json.workspace = true

[build-dependencies]
i-slint-compiler.workspace = true
futures.workspace = true
derive_more.workspace = true

