[package]
name = "oxidrive-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oxidrive"
path = "src/main.rs"

[dependencies]
oxidrive-core.workspace = true

loglet.workspace = true

anyhow.workspace = true
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { workspace = true, features = ["jack"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = { workspace = true }

